# notes

./: .gitignore  404.html  AST-T5.md  CNAME  GELU.md  KoLMogorovTest.md  Slowfast.md  Whisper.md  _config.yml  asttest.py  codecompression.md  feed.xml  fuzzyLogic.md  in-contextformer.md  index.html  index.md  indexx.md  methodology.md  pyproject.toml  qlora.md  robots.txt  sitemap.xml
.github/workflows/: deploy.yml  jekyll-gh-pages.yml
_layouts/: default.html  home.html
_notes/: AST-T5.md  GELU.md  Slowfast.md  codecompression.md  fuzzyLogic.md  in-contextformer.md  qlora.md
_notes/Code compression to reduce hallucinations/: KoLMogorovTest.md  in-contextformer.md  methodology.md
_notes/LangChain/: introduction.md
_notes/Machine Learning/: GELU.md  Slowfast.md  Whisper.md  fuzzyLogic.md
assets/css/: main.css  main.css.map
blog/: index.html
blog/2024/: index.html
docs/: Gemfile  _config.yml  index.md
docs/Code compression to reduce hallucinations/: AST-T5.md  KoLMogorovTest.md  codecompression.md  in-contextformer.md  index.md  methodology.md
docs/LangChain/: index.md  introduction.md
docs/Machine Learning/: Chronos.md  GELU.md  OpenAIDeepResearch.md  Slowfast.md  Whisper.md  fuzzyLogic.md  index.md  qlora.md
docs/_data/: socials.yml
docs/_pages/: about.md
docs/_posts/: 2024-01-01-chronos.md  2024-01-02-fuzzy-logic.md  2024-01-03-gaussian-error-linear-units.md  2024-01-04-deep-research.md  2024-01-05-qlora.md  2024-01-06-slowfast-network.md  2024-01-07-whisper.md  2024-01-08-ast-t5.md  (+28 more)
dsa/: t.py
langchain/: introduction.md
(+123 files in other folders)
