[project]
name = "notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.24",
    "langchain-nvidia-ai-endpoints>=0.3.10",
    "langgraph>=0.4.5",
    "ruff>=0.11.10",
]
