[project]
name = "notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.24",
    "langchain-nvidia-ai-endpoints>=0.3.10",
    "langgraph>=0.4.5",
    "neo4j>=5.28.2",
    "numpy>=2.2.6",
    "ruff>=0.11.10",
]
